--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "3.0.2",
     "jade": "*",
-    "less-middleware": "*"
+    "less-middleware": "*",
+    "mongoose": "~3.3.1",
+    "kue": "~0.4.2"
   },
   "engines": {
     "node": "0.8.x"
