--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jade": "*",
     "less-middleware": "*",
     "mongoose": "~3.3.1",
-    "kue": "~0.4.2"
+    "kue": "~0.4.2",
+    "ratchetio": "0.0.4"
   },
   "engines": {
     "node": "0.8.x"
