--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nko3-intergrupo-mobile",
-  "version": "0.0.0-2",
+  "version": "0.0.0-7",
   "description": "Intergrupo Mobile",
   "main": "server.js",
   "scripts": {
@@ -16,7 +16,8 @@
     "less-middleware": "*",
     "mongoose": "~3.3.1",
     "kue": "~0.4.2",
-    "ratchetio": "0.0.4"
+    "ratchetio": "0.0.4",
+    "socket.io": "~0.9.11"
   },
   "engines": {
     "node": "0.8.x"
