--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "~3.3.1",
     "kue": "~0.4.2",
     "ratchetio": "0.0.4",
-    "socket.io": "~0.9.11"
+    "socket.io": "~0.9.11",
+    "connect": "~2.6.2"
   },
   "engines": {
     "node": "0.8.x"
